--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <div class="container-404">
         <h1>404</h1>
         <p>Ой! Кажется, мы не можем найти ту страницу, которую вы ищете.</p>
-        <a href="../index.html">Вернуться на главную</a>
+        <a href="/index.html">Вернуться на главную</a>
     </div>
 </body>
 </html>
